// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the style output of GridX 1`] = `
<styled.div
  alignX="left"
  className="gc-grid-x"
  gridDirection="horizontal"
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    key=".0"
    vertical={false}
  >
    test
  </Cell>
</styled.div>
`;

exports[`the style output of GridX with alignment to bottom 1`] = `
<styled.div
  alignX="left"
  alignY="bottom"
  className="gc-grid-x"
  gridDirection="horizontal"
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    vertical={false}
  >
    test
  </Cell>
</styled.div>
`;

exports[`the style output of GridX with alignment to center 1`] = `
<styled.div
  alignX="center"
  className="gc-grid-x"
  gridDirection="horizontal"
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    vertical={false}
  >
    test
  </Cell>
</styled.div>
`;

exports[`the style output of GridX with alignment to justify 1`] = `
<styled.div
  alignX="justify"
  className="gc-grid-x"
  gridDirection="horizontal"
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    vertical={false}
  >
    test
  </Cell>
</styled.div>
`;

exports[`the style output of GridX with alignment to middle 1`] = `
<styled.div
  alignX="left"
  alignY="middle"
  className="gc-grid-x"
  gridDirection="horizontal"
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    vertical={false}
  >
    test
  </Cell>
</styled.div>
`;

exports[`the style output of GridX with alignment to right 1`] = `
<styled.div
  alignX="right"
  className="gc-grid-x"
  gridDirection="horizontal"
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    vertical={false}
  >
    test
  </Cell>
</styled.div>
`;

exports[`the style output of GridX with alignment to spaced 1`] = `
<styled.div
  alignX="spaced"
  className="gc-grid-x"
  gridDirection="horizontal"
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    vertical={false}
  >
    test
  </Cell>
</styled.div>
`;

exports[`the style output of GridX with alignment to stretch 1`] = `
<styled.div
  alignX="left"
  alignY="stretch"
  className="gc-grid-x"
  gridDirection="horizontal"
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    vertical={false}
  >
    test
  </Cell>
</styled.div>
`;

exports[`the style output of GridX with alignment to top 1`] = `
<styled.div
  alignX="left"
  alignY="top"
  className="gc-grid-x"
  gridDirection="horizontal"
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    vertical={false}
  >
    test
  </Cell>
</styled.div>
`;
